--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.1-5": ["Fri Apr 19 2024", "Isaac I.Y. Saito", "iisaito@kinugarage.com"], "1.0.1-4": ["Wed Mar 06 2024", "Isaac I.Y. Saito", "iisaito@kinugarage.com"]}
+{"1.0.1-6": ["Mon Jun 24 2024", "Isaac I.Y. Saito", "iisaito@kinugarage.com"], "1.0.1-5": ["Fri Apr 19 2024", "Isaac I.Y. Saito", "iisaito@kinugarage.com"], "1.0.1-4": ["Wed Mar 06 2024", "Isaac I.Y. Saito", "iisaito@kinugarage.com"]}
